# Cpp-Projects

./: .clang-format  .clang-format-ignore  .gitignore  .gitmodules  .pre-commit-config.yaml  CMakeLists.txt  Dockerfile  DoneList.md  README.md  ToDoList.md  generate_file.py  test.sh
External Sort/: .gitignore  CMakeLists.txt  generate_file.py
External Sort/inc/: c_file.h  sort.h
External Sort/src/: c_file.cc  external_sort.cc  sort.cc
Filesystem Dirwalk/: CMakeLists.txt
Filesystem Dirwalk/inc/: file.hpp  filesystem_utils.hpp  int128_support.hpp
Filesystem Dirwalk/src/: file.cpp  filesystem.cpp
For fun/German Words Trainer/Termbox (ncurses) version/: CMakeLists.txt
For fun/German Words Trainer/Termbox (ncurses) version/inc/: button.hpp  config.hpp
For fun/German Words Trainer/Termbox (ncurses) version/src/: main.cpp
For fun/German Words Trainer/Termbox (ncurses) version/src/geometry/: point.cpp
For fun/German Words Trainer/Terminal version/: CMakeLists.txt  todo.md
For fun/German Words Trainer/Terminal version/inc/: database.hpp  runner.hpp
For fun/German Words Trainer/Terminal version/src/: classic_training.cpp  training.cpp
Interviews/2022/Q1/S/: CMakeLists.txt  README.md  optimal_root.cc  test.cc
Interviews/2022/Q1/S/inc/: optimal_root.h  tree.h  tree_path.h
Interviews/2022/Q1/S/src/: optimal_root.cc  tree_path.cc
Interviews/2023/: CMakeLists.txt
Interviews/2023/12/Cit/Prep/: is_valid_tree.cc
Interviews/2023/Q4/: test_runner.py
Interviews/2023/Q4/Cit/Prep/: count_the_planes.cc  lru.cc
Interviews/2023/Q4/DV/: dv.md
Interviews/2023/Q4/DV/src/: OrderBookDecoder.cpp  OrderBookDecoder.h
Interviews/2023/Q4/DV/test/: input.txt
Interviews/2023/Q4/Spe.Tech/: sp_tech.md
Interviews/2024/Q1/D/: CMakeLists.txt
Interviews/2024/Q1/D/Task 1/: CMakeLists.txt  sparse_vector.cpp  sparse_vector.h  sparse_vector_m.impl.h  sparse_vector_v.impl.h  task.md  unittest.cpp
Interviews/2024/Q1/D/Task 2/: CMakeLists.txt  cache.cpp  cache.h  task2.md  translation.cpp  translation.h  types.h  unittest.cpp
Interviews/2024/Q1/Head/: CMakeLists.txt  README.md  main.cpp  test.cpp  trade_event.h  trade_event_utils.cpp  trade_event_utils.h
Interviews/2024/Q1/Susque/: CMakeLists.txt  README.md
Interviews/2024/Q1/Susque/inc/: account.h  request.h  solution.h
Interviews/2024/Q1/Susque/src/: account.cc  solution.cc  string_conv.cc
Interviews/2024/Susque/: CMakeLists.txt  bank_bot.h  string_conv.h  test.cc
Interviews/2024/Susque/inc/: string_conv.h
Interviews/2024/Susque/src/: request.cc
Interviews/Command/: CMakeLists.txt
Interviews/Command/inc/: workerinfo.h
Interviews/Command/src/: task2.cpp
Interviews/Readers&Writers Problem/: CMakeLists.txt
Interviews/Readers&Writers Problem/inc/: reader.hpp  utils.hpp  writer.hpp
Interviews/Readers&Writers Problem/src/: main.cpp  reader.cpp  utils.cpp  writer.cpp
Leetcode/algorithms/: CMakeLists.txt  min_stack.md  score_of_parentheses.cpp  score_of_parentheses.md  shortest_unsorted_subarray.md  shuffle_an_array.md  simplify_path.md
Leetcode/algorithms/easy/: average_on_levels.cc  average_on_levels.cpp  candies.cc  candies.cpp  first_bad_version.cc  matching_the_rule.cc  matching_the_rule.cpp  min_stack.cc  min_stack.cpp
Leetcode/algorithms/easy/descriptions/: candies.md  first_bad_version.md  matching_the_rule.md
Leetcode/algorithms/hard/: first_missing_positive.cc  max_on_line.cc  median_of_two_vectors.cc  merge_sorted_lists.cc  palindrome_list.cc  palindrome_list.cpp  regular_expression_matching.cc  reverse_nodes_in_k_group.cc  strong_password_checker.cc  substring_with_concatenation.cc  sudoku.cc
Leetcode/algorithms/hard/descriptions/: first_missing_positive.md  merge_sorted_lists.md  palindrome_list.md  regular_expression_matching.md  reverse_nodes_in_k_group.md  strong_password_checker.md  substing_with_concentration.md  sudoku.md
Leetcode/algorithms/medium/: count_and_say.cc  count_and_say.cpp  minimal_price_in_store.cc  number_of_ways_to_arrive_at_destination.cc  score_of_parentheses.cc  shortest_unsorted_subarray.cc  shuffle_an_array.cc  simplify_path.cc  solve_equation.cc  solve_equation.cpp
Leetcode/algorithms/medium/descriptions/: count_and_say.md
Leetcode/concurency/: CMakeLists.txt  print_foobar.cpp
Leetcode/concurency/descriptions/: print_foobar.md
Leetcode/concurency/easy/: print_in_order.cpp
Leetcode/concurency/medium/: hydrogen.cc  hydrogen.cpp  print_foobar.cc  print_foobar.cpp
Leetcode/concurency/medium/descriptions/: hydrogen.md
Studies/2021/Q4/lib/linear_algebra/: CMakeLists.txt  README.md
Studies/2023/HRT-Prep/: CMakeLists.txt  README.md
Studies/2023/HRT-Prep/Manhattan/: README.md  solution.cc
Studies/2023/Merge-Sorts-For-Lists/: CMakeLists.txt  algorithms.hpp  linked_list.cpp  linked_list.hpp  linked_list_impl.hpp  printable.hpp  printable_vector.hpp  small_test_framework.h  test.cpp
Studies/2023/Q1/Dining-Philosophers/: CMakeLists.txt  README.md
Studies/2023/Q1/Dining-Philosophers/src/: main.cpp
Studies/2023/Q1/Dining-Philosophers/tests/: CMakeLists.txt
Studies/2023/Q1/Manhattan/: CMakeLists.txt  README.md  manhattan.cc  manhattan.h  test.cc
Studies/2023/Q1/Merge-Sorts-For-Lists/: CMakeLists.txt  linked_list.hpp  linked_list_impl.hpp  printable.hpp  test.cc
Studies/Optimization/: CMakeLists.txt
Studies/Optimization/inc/: barrier.hpp  exceptions.hpp  function.hpp  newton.hpp
Studies/Optimization/lib/linear_algebra/: CMakeLists.txt  README.md
Studies/Optimization/lib/linear_algebra/src/: matrix.cpp
Studies/Optimization/src/: barrier.cc  main.cc  newton.cc
Studies/Stochastic Gradient/: CMakeLists.txt  main.cpp
Studies/Stochastic Gradient/include/: exceptions.hpp  loss.hpp  optimizer.hpp  random_number_generator.hpp  set.hpp
Studies/Stochastic Gradient/include/classification/: loss.hpp
Studies/Stochastic Gradient/include/regression/: loss.hpp
Studies/Stochastic Gradient/src/: loss.cpp  optimizer.cpp  set.cpp
Studies/Stochastic Gradient/src/classification/: loss.cpp
Studies/Stochastic Gradient/src/regression/: loss.cpp
(+332 files in other folders)
